--- a/components/layout/Header.module.css
+++ b/components/layout/Header.module.css
@@ -140,13 +140,22 @@
   text-align: center;
 }
 
+.profiledata{
+  display: flex;
+  flex-direction: column;
+  color: white;
+  padding: 10px;
+  text-align: left;
+
+}
+
 .logoutButton {
-  background-color: #ff4d4d;
   color: white;
   border: none;
   padding: 8px;
   border-radius: 5px;
   cursor: pointer;
+  width: 20px;
   transition: background-color 0.3s ease-in-out;
 }
 
@@ -223,10 +232,8 @@
 }
 
 .userRole {
-  font-size: 14px;
-  color: #333;
-  margin-bottom: 10px;
-  padding: 5px;
+  font-size: 10px;
+  color: white;
   font-weight: 500;
 }
 
