--- a/src/app/complaints/manage/ComplaintManagement.module.css
+++ b/src/app/complaints/manage/ComplaintManagement.module.css
@@ -34,6 +34,7 @@
   max-width: 500px;
   text-align: left;
   border-left: 6px solid #ff4d4d; /* Red accent like complaint details */
+  cursor: pointer;
 }
 
 /* Complaint Title */
@@ -150,6 +151,31 @@
 
 .step:first-child .line {
   display: none; /* Hide first line */
+}
+
+.filters{
+  display: flex;
+  justify-content: center;
+  background-color: #5b5a5a;
+  color: white;
+  width: fit-content;
+  padding: 10px;
+  border-radius: 10px;
+  margin: auto;
+  gap: 10px;
+}
+
+.filterGroup{
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 0 5px;
+}
+
+.selectDropdown{
+  background-color: grey;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 5px;
 }
 
 /* Step Labels */
